# namo-rl

./: .gitignore  README.md  pyproject.toml
configs/: car.yaml
namo_rl/: __init__.py  config.py  contacts.py  env.py
scenes/: README.md
scenes/car/: nav_env.xml  nav_env_3000e.xml
scenes/car/hop_1/benchmark_3/run_0000/: env_0000_pair_000.xml  env_0000_pair_001.xml
scenes/car/hop_1/benchmark_3/run_0001/: env_0001_pair_000.xml  env_0001_pair_001.xml  env_0001_pair_002.xml  env_0001_pair_003.xml
scenes/car/hop_1/benchmark_3/run_0002/: env_0002_pair_000.xml  env_0002_pair_001.xml  env_0002_pair_002.xml  env_0002_pair_003.xml  env_0002_pair_004.xml  env_0002_pair_005.xml  env_0002_pair_006.xml  env_0002_pair_007.xml
scenes/car/hop_1/benchmark_3/run_0003/: env_0003_pair_000.xml  env_0003_pair_001.xml  env_0003_pair_002.xml  env_0003_pair_003.xml  env_0003_pair_004.xml  env_0003_pair_005.xml  env_0003_pair_006.xml  (+1 more)
tdmpc_square_namo/: HANDOFF_F1F3.md  README.md  setup.py
tdmpc_square_namo/launch/: _nvsmi.txt  audit_namo_scenes.py  capture_panes.sh  f1f3_hop1.sh  f1f3_hop2.sh  f1f3_hop3.sh  mtd_hop1.sh  mtd_hop2.sh  mtd_hop3.sh  render_namo_scenes.py  start_all_mtd_tmux.sh  start_all_tmux.sh
tdmpc_square_namo/scene_audit/: HANDOFF.md  index.html
tdmpc_square_namo/tdmpc_square_namo/: __init__.py  config.yaml  train.py  video.py
tdmpc_square_namo/tdmpc_square_namo/envs/: namo.py
tdmpc_square_namo/tests/: smoke_env.py  smoke_render.py
tests/: render_videos.py  sweep_fixes.py  test_simple_ctrl.py  test_smoke.py  trace_se2.py  trace_substep.py
(+38 files in other folders)
