[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "namo-rl"
version = "0.1.0"
description = "Pure-Python Gymnasium environment for diff-drive car kinodynamic RL on NAMO scenes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0",
    "gymnasium>=0.29",
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[tool.setuptools.packages.find]
include = ["namo_rl*"]
